fix footer over width issue on mobile

--- a/src/styles/components/Footer.scss
+++ b/src/styles/components/Footer.scss
@@ -434,24 +434,24 @@
             width: 100%;
             display: flex;
             align-items: flex-start;
-            justify-content: flex-start;
+            justify-content: space-between;
             .footer-left-details {
-              // background-color: black;
               font-size: $x-small;
               height: 50%;
-              margin-left: 16px;
               .details-name {
                 justify-content: flex-start;
+                align-items: flex-start;
                 height: 20%;
-                // background-color: red;
-
                 .name-icon {
-                  // padding-right: 2px;
+                  padding-right: 2px;
                   flex: 0;
-                  margin-right: 14px;
-
+                  // margin-right: 10px;
+                  // background-color: red;
                   .footer-icon {
                     font-size: $xx-large;
+                    margin-left: 16px;
+                    margin-right: 8px;
+                    // margin-right: 8px;
                   }
                 }
                 .rose {
@@ -459,16 +459,20 @@
                   height: 22px;
                   // color: white;
                   font-weight: bolder;
+                  margin-left: 16px;
+                  margin-right: 8px;
                 }
 
                 .name-txt {
-                  // flex: 0.8;
+                  flex: 0;
                   font-size: $x-small;
                   font-weight: 400;
+                  // background: #000;
                 }
                 .name {
                   font-size: $small;
                   font-weight: 900;
+                  // background-color: #fff;
                 }
                 .open-times {
                   display: none;
@@ -476,6 +480,7 @@
                   flex-direction: column;
                   justify-content: flex-start;
                   align-items: flex-start;
+
                   .time {
                     padding-left: 0px;
                   }
@@ -513,7 +518,7 @@
               justify-content: space-evenly;
               .open-times {
                 display: flex;
-                margin-left: 16px;
+                margin-left: 18px;
                 font-size: $x-small;
                 .time {
                   margin-left: 16px;
